--- a/source/_assets/scss/_footer.scss
+++ b/source/_assets/scss/_footer.scss
@@ -195,7 +195,7 @@
     right: 11px;
 
     &.visible {
-      bottom: 40px;
+      bottom: 20px;
     }
 
     .bubble {
